--- a/package.json
+++ b/package.json
@@ -39,78 +39,70 @@
         "command": "snippet-cat.search",
         "title": "Search",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/search.svg",
-          "dark": "media/icons/interface/dark/search.svg"
-        }
+        "icon": "$(search)"
+      },
+      {
+        "command": "snippet-cat.remote",
+        "title": "Remote",
+        "category": "Snippet Cat",
+        "icon": "$(cloud-download)"
       },
       {
         "command": "snippet-cat.refresh",
         "title": "Refresh",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/refresh.svg",
-          "dark": "media/icons/interface/dark/refresh.svg"
-        }
+        "icon": "$(refresh)"
       },
-    
       {
         "command": "snippet-cat.addGroup",
         "title": "Add Group",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/add.svg",
-          "dark": "media/icons/interface/dark/add.svg"
-        }
+        "icon": "$(file-directory-create)"
       },
       {
         "command": "snippet-cat.editGroup",
         "title": "Edit Group",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/edit.svg",
-          "dark": "media/icons/interface/dark/edit.svg"
-        }
+        "icon": "$(edit)"
       },
       {
         "command": "snippet-cat.deleteGroup",
         "title": "Delete Group",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/delete.svg",
-          "dark": "media/icons/interface/dark/delete.svg"
-        }
+        "icon": "$(trash)"
+      },
+      {
+        "command": "snippet-cat.openGroup",
+        "title": "Open in System File Explorer",
+        "category": "Snippet Cat",
+        "icon": "$(folder-opened)"
       },
       {
         "command": "snippet-cat.addSnippet",
         "title": "Add Snippet",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/add.svg",
-          "dark": "media/icons/interface/dark/add.svg"
-        }
-      },
-      {
-        "command": "snippet-cat.deleteSnippet",
-        "title": "Delete Snippet",
-        "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/delete.svg",
-          "dark": "media/icons/interface/dark/delete.svg"
-        }
+        "icon": "$(new-file)"
       },
       {
         "command": "snippet-cat.editSnippet",
         "title": "Edit Snippet",
         "category": "Snippet Cat",
-        "icon": {
-          "light": "media/icons/interface/light/edit.svg",
-          "dark": "media/icons/interface/dark/edit.svg"
-        }
+        "icon": "$(pencil)"
+      },
+      {
+        "command": "snippet-cat.deleteSnippet",
+        "title": "Delete Snippet",
+        "category": "Snippet Cat",
+        "icon": "$(trash)"
       }
     ],
     "menus": {
       "view/title": [
+        {
+          "command": "snippet-cat.remote",
+          "when": "view == snippet-cat-view",
+          "group": "navigation"
+        },
         {
           "command": "snippet-cat.search",
           "when": "view == snippet-cat-view",
@@ -139,20 +131,26 @@
           "group": "inline@2"
         },
         {
+          "command": "snippet-cat.openGroup",
+          "when": "view == snippet-cat-view && viewItem == Group",
+          "group": "inline@2"
+        },
+        {
           "command": "snippet-cat.deleteGroup",
           "when": "view == snippet-cat-view && viewItem == Group",
           "group": "inline@3"
         },
         {
-          "command": "snippet-cat.deleteSnippet",
+          "command": "snippet-cat.editSnippet",
           "when": "view == snippet-cat-view && viewItem == Snippet",
           "group": "inline"
         },
         {
-          "command": "snippet-cat.editSnippet",
+          "command": "snippet-cat.deleteSnippet",
           "when": "view == snippet-cat-view && viewItem == Snippet",
           "group": "inline"
         }
+  
       ]
     }
   },
@@ -168,19 +166,22 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.71.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.71.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
     "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@vscode/test-electron": "^2.1.5"
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "webdav": "^4.11.0"
   }
 }
