--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "snippet-cat",
   "displayName": "Snippet Cat",
   "description": "Snippet Collections",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "yuelili",
+  "icon":"media/logo.png",
   "sponsor": {
     "url": "https://yuelili.com"
   },
-  "icon": "https://github.com/Yuelioi/snippet-cat/blob/main/media/cat.svg",
+
   "engines": {
     "vscode": "^1.71.0"
   },
